--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "vue-cli-plugin-vuetify": "^2.5.8"
   },
   "eslintConfig": {
     "root": true,
